# tauri-web-template

./: .gitignore  README.md  bunfig.toml  components.d.ts  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
src/: App.vue  components.d.ts  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  i18n.rs  lib.rs  main.rs  tray.rs
src/assets/styles/: global.scss
src/components/: AppSearch.vue
src/composables/: useKeyboard.ts  usePlatform.ts  useResponsive.ts  useTheme.ts
src/i18n/: en.ts  index.ts  zh.ts
src/layouts/: DefaultLayout.vue
src/plugins/: index.ts  pwa.ts
src/router/: index.ts
src/shared/: ipc.ts  locale.ts
src/stores/: app.ts  persist.ts
src/types/: env.d.ts
src/utils/: crypto.ts  env.ts  file.ts  format.ts
src/views/: AboutView.vue  CryptoView.vue  FileView.vue  HomeView.vue  SystemView.vue  UpdateView.vue
